--- a/src/_includes/_layout.pug
+++ b/src/_includes/_layout.pug
@@ -1,4 +1,8 @@
 block variables
+  -
+    // Count depth directory hierarchy
+    var depth = (relativePath.match(/\//g) || []).length;
+    var relativeRoot = new Array(depth + 1).join( '../' );
 doctype html
 html(lang=pageLang)
   head(prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# " + pageOgpType + ": http://ogp.me/ns/" + pageOgpType + "#")
