--- a/src/_includes/_meta.pug
+++ b/src/_includes/_meta.pug
@@ -10,7 +10,7 @@ meta(name="description" content=pageDescription)
 meta(name="keywords" content=pageKeywords)
 
 block css
-  link(rel="stylesheet" href="/assets/css/common.css")
+  link(rel="stylesheet" href=relativeRoot + "assets/css/common.css")
 
 //- OGP
 if pageOgpTitle
